// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Loading shouls render Loading correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Loading
    loadingText="Conectando Spotify..."
    tryAgain={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFF",
              "fontSize": 18,
            }
          }
        >
           
          Conectando Spotify...
           
        </Text>,
        false,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "#FFF",
          "hidesWhenStopped": true,
          "size": "large",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            " ",
            "Conectando Spotify...",
            " ",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#FFF",
            "fontSize": 18,
          },
        },
        "ref": null,
        "rendered": Array [
          " ",
          "Conectando Spotify...",
          " ",
        ],
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ActivityIndicator
            animating={true}
            color="#FFF"
            hidesWhenStopped={true}
            size="large"
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontSize": 18,
              }
            }
          >
             
            Conectando Spotify...
             
          </Text>,
          false,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "#FFF",
            "hidesWhenStopped": true,
            "size": "large",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              " ",
              "Conectando Spotify...",
              " ",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#FFF",
              "fontSize": 18,
            },
          },
          "ref": null,
          "rendered": Array [
            " ",
            "Conectando Spotify...",
            " ",
          ],
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Snapshot Loading shouls render tryAgain correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Loading
    loadingText="Conectando Spotify..."
    tryAgain={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFF",
              "fontSize": 18,
            }
          }
        >
           
          Conectando Spotify...
           
        </Text>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={undefined}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#DDD",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginTop": 10,
              "padding": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#333",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Tentar Novamente
          </Text>
        </TouchableOpacity>,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "#FFF",
          "hidesWhenStopped": true,
          "size": "large",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            " ",
            "Conectando Spotify...",
            " ",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#FFF",
            "fontSize": 18,
          },
        },
        "ref": null,
        "rendered": Array [
          " ",
          "Conectando Spotify...",
          " ",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#333",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Tentar Novamente
          </Text>,
          "onPress": undefined,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#DDD",
            "borderRadius": 3,
            "justifyContent": "center",
            "marginTop": 10,
            "padding": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Tentar Novamente",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#333",
              "fontSize": 14,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Tentar Novamente",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ActivityIndicator
            animating={true}
            color="#FFF"
            hidesWhenStopped={true}
            size="large"
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontSize": 18,
              }
            }
          >
             
            Conectando Spotify...
             
          </Text>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={undefined}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#DDD",
                "borderRadius": 3,
                "justifyContent": "center",
                "marginTop": 10,
                "padding": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
            >
              Tentar Novamente
            </Text>
          </TouchableOpacity>,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "#FFF",
            "hidesWhenStopped": true,
            "size": "large",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              " ",
              "Conectando Spotify...",
              " ",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#FFF",
              "fontSize": 18,
            },
          },
          "ref": null,
          "rendered": Array [
            " ",
            "Conectando Spotify...",
            " ",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "bold",
                }
              }
            >
              Tentar Novamente
            </Text>,
            "onPress": undefined,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "#DDD",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginTop": 10,
              "padding": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Tentar Novamente",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#333",
                "fontSize": 14,
                "fontWeight": "bold",
              },
            },
            "ref": null,
            "rendered": "Tentar Novamente",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
